fix vercel adapter shit

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.GzGCeQ2Z.js",
+    "file": "_app/immutable/entry/app.BFY9DXg1.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -36,7 +36,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.Do1qCWvh.js",
+    "file": "_app/immutable/nodes/1.DYS7hwvx.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -46,7 +46,7 @@
       "_B6S-3aiA.js",
       "_CREA1FDS.js",
       "_PWvj0eXD.js",
-      "_tLMdccPi.js"
+      "_DDq2DylC.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -102,6 +102,15 @@
     "file": "_app/immutable/chunks/CREA1FDS.js",
     "name": "runtime"
   },
+  "_DDq2DylC.js": {
+    "file": "_app/immutable/chunks/DDq2DylC.js",
+    "name": "entry",
+    "imports": [
+      "_CREA1FDS.js",
+      "_D_bw_O7V.js",
+      "_DSgEMVr_.js"
+    ]
+  },
   "_DJ6s6piO.js": {
     "file": "_app/immutable/chunks/DJ6s6piO.js",
     "name": "branches",
@@ -145,22 +154,13 @@
       "_CREA1FDS.js"
     ]
   },
-  "_tLMdccPi.js": {
-    "file": "_app/immutable/chunks/tLMdccPi.js",
-    "name": "entry",
-    "imports": [
-      "_CREA1FDS.js",
-      "_D_bw_O7V.js",
-      "_DSgEMVr_.js"
-    ]
-  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.DDHSVae1.js",
+    "file": "_app/immutable/entry/start.DmvMSL4r.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_tLMdccPi.js"
+      "_DDq2DylC.js"
     ]
   }
 }
